Update rotation method for clock to prevent stuttering on iphone

--- a/client/styles/_clock.scss
+++ b/client/styles/_clock.scss
@@ -7,7 +7,7 @@
         border-radius: 2px;
         background: #fff;
 
-        // @include single-transition(all);
+        @include single-transition(all);
         @include transition-duration($default-transition-duration * 3);
         @include transition-timing-function(ease-in-out);
     }
@@ -28,11 +28,11 @@
     .hour {
         margin-top: 20%;
         height: 30%;
-        @include transform3d( rotate3d(0, 0, 1, 120deg) );
+        @include rotateZ(120deg);
     }
 
     .minute {
-        @include transform3d( rotate3d(0, 0, 1, 0deg) );
+        @include rotateZ(0deg);
     }
 
     .second {
@@ -40,7 +40,7 @@
         width: 2px;
         opacity: .75;
         @include apply-origin(1px 100%, true);
-        @include transform3d( rotate3d(0, 0, 1, 225deg) );
+        @include rotateZ(225deg);
     }
 
     &.loading {
@@ -49,8 +49,8 @@
             @include transition-timing-function(ease-in);
         }
 
-        .hour   { @include transform3d( rotate3d(0, 0, 1, -36000deg) ); }
-        .minute { @include transform3d( rotate3d(0, 0, 1, -36000deg * 12) ); }
-        .second { @include transform3d( rotate3d(0, 0, 1, -36000deg * 12 * 2) ); }
+        .hour   { @include rotateZ(-36000deg); }
+        .minute { @include rotateZ(-36000deg * 12); }
+        .second { @include rotateZ(-36000deg * 12 * 2); }
     }
 }
